--- a/html-Personal Site/education.html
+++ b/html-Personal Site/education.html
@@ -5,28 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Subscription</title>
+    <title>Education</title>
+
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
-    <link rel="icon" href="./css/favicon.ico">
     <script src="./libs/jquery.js"></script>
     <script src="./scripts/script.js"></script>
+    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
+    <link rel="icon" href="./css/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <div class="navbar" id="myNavbar">
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
         <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
-
-
+        <a href="javascript:void(0);" class="icon " onclick="menu()"><i class="fas fa-bars"></i></a>
     </div>
-
-
-    <h1 class="hello"> Hello </h1>
 </body>
 
 </html>
