home page additions

--- a/html-Personal Site/index.html
+++ b/html-Personal Site/index.html
@@ -44,79 +44,31 @@
     </div>
 
     <div class="middle-div-home">
+        <img class="andrew" src="./Images/andrew-black.JPG" alt="Andrew English">
+        <h2>Dia Dhuit</h2>
+        <p>
+            Join me as I try and navigate through the world of programming, software development and everything in between. As a complete 
+            novice with no previous experience within the tech sector, I hope to provide an insight into a booming industry and highlight how I 
+            will eventually make your job redundant through automation! If you would like to get in contact, you can do so by clicking on any 
+            of the social media links at the bottom of the page or alternitively, you can visit my Contact page for further information.
+        </p>
+    </div>
 
+    <div class="bottom-div-home">
+        <img class="fit" src="./Images/Fit-Black.png" alt="FIT Logo">
+        <h2>The Course</h2>
+        <p>
+            Tech companies recruit an apprentice (like me) for a 2 year programme with the assistance of <a href="http://fit.ie">FIT</a>. The first 6 months require apprentices to attend full time, off
+            the job training. This takes place in the <a href="http://www.rstc.ie">Regional Skills and Training Centre</a> in Dundalk, Co. Louth where we
+            are tutored by Dean Harrison of <a href="http://oiliuna.ie">Oiliuna</a> . The
+            next 7 - 18 months includes working at my company, <a href="http://www.intactsoftware.com">Intact,</a> for 3 days a week and then 2 days in
+            the RSTC. Months 19 - 24 are broken up into 4 day periods at our companies and 1 day in the RSTC. After 2 years, we then work full time as
+            qualified (hopefully) software developers.
+        </p>
+            
     </div>
 
 
-
-    <hr />
-
-    <h3>Education</h3>
-    <p>
-        <ul>
-            <li>Software Development Apprenticeship - <a href="https://www.rstc.ie/"> RSTC Dundalk </a> </li>
-            <li>MA Nationalism and Ethnic Conflict - UCD</li>
-            <li>BA History, Politics and International Relations - UCD</li>
-        </ul>
-    </p>
-    <hr />
-    <h3>My Hobbies</h3>
-    <a href="hobbies.html">Here's a link to my hobbies</a>
-    <hr>
-    <h3>Work Experience</h3>
-    <table border="1px">
-        <tr>
-            <th>Dates</th>
-            <th>Occupation</th>
-            <th>Employer</th>
-        </tr>
-        <tr>
-            <td> 2019 - Present</td>
-            <td>Apprentice Software Developer</td>
-            <td>Intact</td>
-        </tr>
-        <tr>
-            <td>2016 - 2019</td>
-            <td>Painter & Decorator</td>
-            <td>Irish Painters LTD</td>
-        </tr>
-        <tr>
-            <td>2014 - 2015</td>
-            <td>Politics Tutor</td>
-            <td>University College Dublin</td>
-        </tr>
-    </table>
-
-    <hr>
-
-    <h3>Skills</h3>
-    <table cellspacing="20px">
-
-        <tr>
-            <td>C#</td>
-            <td>&#11088; &#11088; &#11088;</td>
-            <td>HTML</td>
-            <td>&#11088; &#11088; &#11088;</td>
-        </tr>
-        <tr>
-            <td>CSS</td>
-            <td>&#11088; &#11088;</td>
-            <td>JavaScript</td>
-            <td>&#11088; &#11088; &#11088;&#11088;</td>
-        </tr>
-
-        <tr>
-            <td>Data Security</td>
-            <td>&#11088; &#11088;</td>
-            <td>Computer Maintenance</td>
-            <td>&#11088; &#11088;</td>
-        </tr>
-
-    </table>
-    <hr>
-    <h3>Contact Details</h3>
-
-    <a href="contact.html">Here's a link to my contact details</a>
 
 </body>
 
