--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,12 @@
     <script src="./libs/jquery.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
-    <link rel="icon" href="./css/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.ico">
 </head>
 
 <body>
+
+
 
     <div class="navbar" id="myNavbar">
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
@@ -58,6 +59,16 @@
 
 
     </form>
+
+    <div class="bottom-navbar">
+            <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+            <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
+            <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+    
+            <p> 
+                © Andrew English 2019. All rights reserved.
+            </p>
+    </div>  
 
 </body>
 
