--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Education</title>
-
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./libs/jquery.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
-    <link rel="icon" href="./css/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.ico">    
 </head>
 
 <body>
+
     <div class="navbar" id="myNavbar">
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
@@ -23,7 +22,34 @@
         <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
         <a href="javascript:void(0);" class="icon " onclick="menu()"><i class="fas fa-bars"></i></a>
+
+
     </div>
+
+    <h3>My Hobbies</h3>
+    <p>
+        <ol>
+            <li>Gaelic Football</li>
+            <li>Politics</li>
+            <li>History</li>
+            <li>Reading</li>
+            <li>Writing</li>
+            <li>Coding</li>
+        </ol>
+    </p>
+    <hr>
+
+    
+    <div class="bottom-navbar">
+            <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+            <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
+            <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+    
+            <p> 
+                © Andrew English 2019. All rights reserved.
+            </p>
+    </div>  
+
 </body>
 
 </html>
