--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <script src="./libs/jquery.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
-    <link rel="icon" href="./css/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="./favicon.ico">
 
 </head>
 
@@ -56,6 +54,7 @@
 
     <div class="bottom-div-home">
         <img class="fit" src="./Images/Fit-Black.png" alt="FIT Logo">
+            <!--Copyright of www.fit.ie-->
         <h2>The Course</h2>
         <p>
             Tech companies recruit an apprentice (like me) for a 2 year programme with the assistance of <a href="http://fit.ie">FIT</a>. The first 6 months require apprentices to attend full time, off
@@ -67,6 +66,17 @@
         </p>
             
     </div>
+
+    <div class="bottom-navbar">
+        <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+        <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
+        <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+
+        <p> 
+            © Andrew English 2019. All rights reserved.
+        </p>
+    </div>  
+
 
 
 
