--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andrew's Personal Page</title>
+    <!-- TODO: Add Meta Description -->
+    <!-- TODO: Add Meta Keywords -->
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="./libs/jquery.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
     <link rel="icon" href="./favicon.ico">
-
 </head>
 
 <body>
@@ -22,27 +19,25 @@
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
         <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
-        <a href="javascript:void(0);" class="icon " onclick="menu()"><i class="fas fa-bars"></i></a>
+        <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
     </div>
 
 
-
-
     <div class="top-div-home">
-        <img class="top-cloud" src="./Images/black-cloud.svg" alt="Cloud">
+        <img class="top-cloud" src="./images/black_cloud.svg" alt="Cloud">
         <!--<div>Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
         <h1>I'm Andrew.</h1>
         <h3>I'm an apprentice software developer.</h3>
-        <img class="bottom-cloud" src="./Images/black-cloud.svg" alt="Cloud">
+        <img class="bottom-cloud" src="./images/black_cloud.svg" alt="Cloud">
         <!--<div>Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
-        <img class="mountain" src="./Images/mountain.svg" alt="Mountain">
+        <img class="mountain" src="./images/mountain.svg" alt="Mountain">
         <!--Copyrights to all designs remain the property of Ascension Commerce LLC at www.shopcraftables.com. -->
 
 
     </div>
 
     <div class="middle-div-home">
-        <img class="andrew" src="./Images/andrew-black.JPG" alt="Andrew English">
+        <img class="andrew" src="./images/andrew_black.jpg" alt="Photograph of Andrew English.">
         <h2>Dia Dhuit</h2>
         <p>
             Join me as I try and navigate through the world of programming, software development and everything in between. As a complete 
@@ -53,8 +48,8 @@
     </div>
 
     <div class="bottom-div-home">
-        <img class="fit" src="./Images/Fit-Black.png" alt="FIT Logo">
-            <!--Copyright of www.fit.ie-->
+        <img class="fit" src="./images/fit_black.png" alt="FIT Logo">
+        <!--Copyright of www.fit.ie-->
         <h2>The Course</h2>
         <p>
             Tech companies recruit an apprentice (like me) for a 2 year programme with the assistance of <a href="http://fit.ie">FIT</a>. The first 6 months require apprentices to attend full time, off
@@ -64,7 +59,7 @@
             the RSTC. Months 19 - 24 are broken up into 4 day periods at our companies and 1 day in the RSTC. After 2 years, we then work full time as
             qualified (hopefully) software developers.
         </p>
-            
+
     </div>
 
     <div class="bottom-navbar">
@@ -79,7 +74,9 @@
 
 
 
-
+    <script src="./libs/jquery.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
 </html>
