--- a/interests.html
+++ b/interests.html
@@ -8,10 +8,7 @@
     <title>Subscription</title>
 
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
     <link rel="icon" href="./favicon.ico">
-    <script src="./libs/jquery.js"></script>
-    <script src="./scripts/script.js"></script>
 </head>
 
 <body>
@@ -22,7 +19,7 @@
                 <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
                 <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
                 <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
-                <a href="javascript:void(0);" class="icon " onclick="menu()"><i class="fas fa-bars"></i></a>
+                <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
         </div>
 
         <div class="bottom-navbar">
@@ -34,7 +31,10 @@
                     © Andrew English 2019. All rights reserved.
                 </p>
         </div>  
-   
+
+    <script src="./libs/jquery.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
 </html>
