--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="./libs/jquery.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
     <link rel="icon" href="./favicon.ico">    
 </head>
 
@@ -21,7 +18,7 @@
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
         <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
-        <a href="javascript:void(0);" class="icon " onclick="menu()"><i class="fas fa-bars"></i></a>
+        <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
 
 
     </div>
@@ -50,6 +47,9 @@
             </p>
     </div>  
 
+    <script src="./libs/jquery.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
 </html>
