--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,6 @@
     <title>Contact Details</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/parsley.css">
-    <script src="./libs/jquery.js"></script>
-    <script src="./libs/parsley.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
     <link rel="icon" href="./favicon.ico">
 </head>
 
@@ -25,7 +21,7 @@
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
         <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
-        <a href="javascript:void(0);" class="icon " onclick="menu()"><i class="fas fa-bars"></i></a>
+        <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
 
 
     </div>
@@ -84,6 +80,10 @@
         </p>
     </div>
 
+    <script src="./libs/jquery.js"></script>
+    <script src="./libs/parsley.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
 </html>
