--- a/education.html
+++ b/education.html
@@ -8,7 +8,6 @@
     <title>Education</title>
 
     <link rel="stylesheet" href="./css/styles.css">
-
     <link rel="icon" href="./favicon.ico">
 
 </head>
@@ -67,12 +66,18 @@
         <h1>Masters</h1>
 
         <table id="masters" align="center">
-            <tr>
-                <th>Course Code</th>
-                <th>Course Module</th>
-                <th>Grade</th>
-                <th>Grade Point Average</th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Course Code</th>
+                    <th>Course Module</th>
+                    <th>Grade</th>
+                    <th>Grade Point Average</th>
+                </tr>
+            </thead> 
+
+            <tbody>
+
+            </tbody>
         </table>
     </div>
 
