--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
           <div class="column">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18763.120042527808!2d-6.3746195!3d53.9958527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7794d2bbeb48f5e1!2sRSTC+Regional+Skills+%26+Training+Centre!5e0!3m2!1sen!2sie!4v1562232816049!5m2!1sen!2sie"
-                width="400" height="400" frameborder="0" style="border:0" allowfullscreen>
+                width="100%" height="400" frameborder="0" style="border:0" allowfullscreen>
             </iframe>
           </div>
           <div class="column">
