Fixed video file conflict

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- TODO: Add Meta Description -->
     <!-- TODO: Add Meta Keywords -->
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 
 <body>
@@ -17,7 +17,6 @@
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
-        <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
         <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
     </div>
@@ -48,7 +47,7 @@
     </div>
 
     <div class="bottom-div-home">
-        <img class="fit" src="./images/fit_black.png" alt="FIT Logo">
+       <a href="https://fit.ie"><img class="fit" src="./images/fit_black.png" alt="FIT Logo"></a>
         <!--Copyright of www.fit.ie-->
         <h2>The Course</h2>
         <p>
@@ -58,6 +57,20 @@
             next 7 - 18 months includes working at my company, <a href="http://www.intactsoftware.com">Intact,</a> for 3 days a week and then 2 days in
             the RSTC. Months 19 - 24 are broken up into 4 day periods at our companies and 1 day in the RSTC. After 2 years, we then work full time as
             qualified (hopefully) software developers.
+        </p>
+
+    </div>
+
+    <div class="intact">
+        <a href="https://www.intactsoftware.com"><img id="intact-logo" src="./images/intact.svg" alt="Intact Software"></a>
+        <h2>My Company</h2>
+        <p>
+            I was very fortunate that <a href="https://www.intactsoftware.com">Intact</a> were willing to take a chance with me and employ me 
+            as their apprentice. They requested someone who was a complete beginner but had an interest in the world of technology and a proven track
+            record of self taught learning and education. The company HQ is based in my hometown of Dundalk, Co. Louth and it has offices all across 
+            Ireland and the UK. They have over 26 years experience in the field of enterprise resource planning and they supply a wide array of small and
+            medium businesses with their software. In laymans terms, Intact develops software that organisations and companies use to manage day-to-day business 
+            activities, such as accounting, procurement, project management, risk management and compliance, and supply chain operations. 
         </p>
 
     </div>
