--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact Details</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/parsley.css">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 
 <body>
@@ -19,7 +19,6 @@
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
-        <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
         <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
 
