--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
     <title>Education</title>
 
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./images/favicon.ico">
 
 </head>
 
@@ -17,7 +17,6 @@
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
-        <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
         <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
     </div>
@@ -52,13 +51,14 @@
 
 
     <div class="undergrad-uni">
-        <img src="./images/ucd.png" alt="UCD">
+        <a href="https://www.ucd.ie/"><img src="./images/ucd.png" alt="UCD"></a>
         <p>
             Before my escapades into the world of technology, I had a previous life of study and education. After completing my Leaving Cert
             in 2011, I entered University College Dublin at 17 where I studied history, politics and international relations for the
             next 3 years. I had a particular interest in revolutionary and paramilitary groups, both left and right on the political axis. I
             also enjoyed studying the history of the USSR and the Eastern bloc along with the history and politics of the Middle East and
-            North Africa Region. In 2014, I graduated with a BA joint major in History Politics and International Relations.
+            North Africa Region. In 2014, I graduated with a BA joint major in History Politics and International Relations. In the same year
+            and institution, I enrolled in a Masters programme where I eventually graduated in 2016.
         </p>
     </div>
 
@@ -124,8 +124,7 @@
         <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1"> <img class="myBook" src="./images/e_book.jpg" alt="Aindriu Inglis Book Cover"></a>
 
         <p>
-            After I graduated in 2014, I decided I would like to continue my studies and complete a masters. In the same year, I began an MA in
-            Nationalism and Ethnic Conflict in University College Dublin. This course enabled me to study revolutionary groups, paramilitary organisations 
+            My MA in political science specialised in Nationalism and Ethnic Conflict. This course enabled me to study revolutionary groups, paramilitary organisations 
             and conflict regions in more detail. As part of my course work, I had to write a 15,000 word dissertation. My piece focused
             primarily on the IRA and the Troubles in Northern Ireland. As you can see from my results table, I received an A- for my
             efforts. After a short period of time, my dissertation was picked up by <a href="https://www.bookhubpublishing.com/"> Book Hub Publishing</a> based
