--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
-    <link rel="icon" href="./favicon.ico">    
+    <link rel="icon" href="./images/favicon.ico">    
 </head>
 
 <body>
@@ -18,7 +18,6 @@
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
         <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
-        <a href="interests.html"><i class="fas fa-futbol"></i>Interests</a>
         <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
         <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
 
@@ -40,19 +39,74 @@
     </div>
 
 
+
+    <h3>Pseudocode</h3>
     <div class="portfolio-slide">
         <div class="pseudo">
             <div><img id="pseudo1" src="./images/pseudo_1.JPG" alt="Copy of Pseudocode test"></div>
             <div><img id="pseudo2" src="./images/pseudo_2.JPG" alt="Copy of Pseudocode test"> </div>
         </div>
 
-        <p>
+        <p id="pseudo-para">
             This was the first test I had during the programme. Learning a new language with C# was difficult enough never mind trying to
             get to grips with Pseudocode. After several attempts and a crash course on Pseudocode lingo, I eventually got the hang of it
             and understood why this is such an important part in the planning stage of writing clear and concise code. Togehter with one of my 
             classmates, we produced the Pseudocode you can see above.
         </p>
     </div>
+
+    <h3>Basic Object Oriented Programming with C#</h3>
+    <div class="c-sharp-slide">
+        <div class="c-sharp">
+            <div><img src="./images/holiday_gui.JPG" alt="Image of Holiday GUI"></div>
+            <div><img src="./images/holiday_code1.JPG" alt="Holiday Code"></div>
+            <div><img src="./images/holiday_code2.JPG" alt="Holiday Code"></div>
+            <div><img src="./images/holiday_code3.JPG" alt="Holiday Code"></div>
+        </div>
+
+        <p id="c-sharp-para">
+            The C# examination was one of hardest exams I've done in all my years of education. Despite being well prepared, it was unlike any other
+            exam I've ever sat. Throughout the module, we became accustomed with classes, methods and functions. We worked through for loops, arrays
+            and if statements. The funny thing is, we've only scratched the surface of this hugely powerful language. In semester 2, we delve further
+            into the world of C# and Object Oriented Programming. The photos above are from a practice test I did for our exam earlier in the year.
+        </p>
+    </div>
+
+
+    <h3>Principles of ICT Systems and Data Security</h3>
+    <div class="data-slide">
+
+        <iframe width="600" height="450" src="https://www.youtube.com/embed/EIq0J7Sr7eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p>
+            Whilst not a programming module per se, I found this module hugely beneficial on many fronts. Discussing areas surrounding
+            malware, encryption and data security is not only beneficial for work place environments, but also in every day aspects of our lives.
+            As a class, we were afforded the opportunity to work together and make presentations on various topics. My classmate Bryan Donnelly and
+            I presented on encryption and hash functions. From the video you can see above, we demonstrated the process of a dictionary attack on
+            over 14 million passwords. Below you can also see a copy of the presentation we made in front of our tutor and classmates.
+        </p>
+
+        <a href="https://1drv.ms/p/s!AuBIVeU32YIOmEjG1PSS5W6PCHUg">Data Security Presentation File</a>
+    </div>
+
+    <h3>Database Programming - SQL</h3>
+    <div class="sql-slide">
+        <div class="sql">
+            <div><img src="./images/test_1.PNG" alt="SQL Test No1"></div>
+            <div><img src="./images/test_2.PNG" alt="SQL Test No10"></div>
+            <div><img src="./images/test_11.PNG" alt="SQL Test No11"></div>
+            <div><img src="./images/test_17.PNG" alt="SQL Test No17"></div>
+        </div>
+
+        <p>
+            With the SQL database module, we learned how to navigate throguh a relatively small database using commands such as "SELECT", "WHERE,
+            "IN", "FROM" and "TO". We also became accustomed with inner joins and nested selects too. I really enjoyed this module and I look forward
+            to the semester 2 database module where we go a little bit more in depth in relation to how databases are actally created. The photos above
+            are snippet coppies of the SQL database exam we had earlier this year.
+        </p>
+    </div>
+
+
 
 
     
